--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,3 +13,9 @@
           making: "製作中"
           preparing_ship: "発送準備中"
           finish_prepare: "発送済み"
+      order_detail:
+        making_status:
+          cannot_start: "着手不可"
+          waiting_for_production: "制作待ち"
+          in_production: "製作中"
+          finished: "制作終了"
